<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_ros_gl_viewer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="erik@orjehag.se">Erik Örjehag</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>py_trees_ros_interfaces</depend>
  <depend>unique_identifier_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
